@@ -8,7 +8,7 @@ use MooseX::MarkAsMethods ( autoclean => 1 );
 
 use Pinto::Types qw(Io);
 use Pinto::Util qw(itis);
-use Pinto::Constants qw(:server);
+use Pinto::Constants qw(:protocol);
 
 #-----------------------------------------------------------------------------
 
@@ -56,7 +56,7 @@ sub diag {
     # Prepend prefix to each line (not just at the start of the message)
     # The prefix is used by Pinto::Remote to distinguish between
     # messages that go to stderr and those that should go to stdout
-    $msg =~ s/^/$PINTO_SERVER_DIAG_PREFIX/gmx;
+    $msg =~ s/^/$PINTO_PROTOCOL_DIAG_PREFIX/gmx;
 
     print { $self->stderr } $msg or croak $!;
 }
@@ -70,7 +70,7 @@ sub show_progress {
 
     $self->stderr->autoflush;    # Make sure pipes are hot
 
-    print { $self->stderr } $PINTO_SERVER_PROGRESS_MESSAGE . "\n" or croak $!;
+    print { $self->stderr } $PINTO_PROTOCOL_PROGRESS_MESSAGE . "\n" or croak $!;
 }
 
 #-----------------------------------------------------------------------------
