@@ -15,11 +15,12 @@ use Proc::Fork;
 use Path::Class;
 use Proc::Terminator;
 use Plack::Response;
+use HTTP::Status qw(:constants);
 
 use Pinto;
 use Pinto::Result;
 use Pinto::Chrome::Net;
-use Pinto::Constants qw(:server);
+use Pinto::Constants qw(:protocol);
 
 #-------------------------------------------------------------------------------
 
@@ -33,6 +34,9 @@ extends qw(Pinto::Server::Responder);
 
 sub respond {
     my ($self) = @_;
+
+    my $error_response = $self->check_protocol_version;
+    return $error_response if $error_response;
 
     # path_info always has a leading slash, e.g. /action/list
     my ( undef, undef, $action_name ) = split '/', $self->request->path_info;
@@ -64,6 +68,26 @@ sub respond {
 
 #-------------------------------------------------------------------------------
 
+sub check_protocol_version {
+    my ($self) = @_;
+
+    # NB: Format derived from GitHub: https://developer.github.com/v3/media
+    my $media_type_rx = qr{^ application / vnd [.] pinto [.] v(\d+) (?:[+] .+)? $}ix;
+
+    my $accept = $self->request->header('Accept') || '';
+    my $version = $accept =~ $media_type_rx ? $1 : 0;
+
+    return unless my $cmp = $version <=> $PINTO_PROTOCOL_VERSION;
+
+    my $fmt = 'Your client is too %s for this server. You must upgrade %s.';
+    my ($age, $component) = $cmp > 0 ? qw(new pintod) : qw(old pinto);
+    my $msg = sprintf $fmt, $age, $component;
+
+    return [ HTTP_UNSUPPORTED_MEDIA_TYPE, [], [$msg] ];
+}
+
+#-------------------------------------------------------------------------------
+
 sub child_proc {
     my ( $self, $pipe, $chrome_args, $pinto_args, $action_name, $action_args ) = @_;
 
@@ -90,7 +114,7 @@ sub child_proc {
         try   { $pinto->run( ucfirst $action_name => %{$action_args} ) }
         catch { print {$writer} $_; Pinto::Result->new->failed };
 
-    print {$writer} $PINTO_SERVER_STATUS_OK . "\n" if $result->was_successful;
+    print {$writer} $PINTO_PROTOCOL_STATUS_OK . "\n" if $result->was_successful;
 
     exit $result->was_successful ? 0 : 1;
 }
@@ -106,10 +130,12 @@ sub parent_proc {
 
     my $response = sub {
         my $responder = shift;
-        my $headers   = [ 'Content-Type' => 'text/plain' ];
-        my $writer    = $responder->( [ 200, $headers ] );
+
+        my $headers   = ['Content-Type' => 'text/plain'];
+        my $writer    = $responder->( [ HTTP_OK, $headers ] );
         my $socket    = $self->request->env->{'psgix.io'};
-        my $nullmsg   = $PINTO_SERVER_NULL_MESSAGE . "\n";
+        my $nullmsg   = $PINTO_PROTOCOL_NULL_MESSAGE . "\n";
+
 
         while (1) {
 
