@@ -13,7 +13,7 @@ use HTTP::Date;
 use HTTP::Request::Common;
 
 use Pinto::Server;
-use Pinto::Constants qw(:server);
+use Pinto::Constants qw(:server :protocol);
 
 use lib 't/lib';
 use Pinto::Tester;
@@ -22,9 +22,10 @@ use Pinto::Tester::Util qw(make_dist_archive);
 #------------------------------------------------------------------------------
 # Setup...
 
-my $t    = Pinto::Tester->new;
-my %opts = ( root => $t->pinto->root );
-my $app  = Pinto::Server->new(%opts)->to_app;
+my $t       = Pinto::Tester->new;
+my %opts    = ( root => $t->pinto->root );
+my $app     = Pinto::Server->new(%opts)->to_app;
+my @headers = (Accept => $PINTO_PROTOCOL_ACCEPT);
 
 #------------------------------------------------------------------------------
 # Fetching an index...
@@ -83,7 +84,7 @@ test_psgi
         client => sub {
         my $cb     = shift;
         my $params = { author => 'THEBARD', recurse => 0, message => 'test', archives => [$archive] };
-        my $req    = POST( 'action/add', Content => { action => encode_json($params) } );
+        my $req    = POST( 'action/add', @headers, Content => { action => encode_json($params) } );
         my $res    = $cb->($req);
         action_response_ok($res);
         };
@@ -93,7 +94,7 @@ test_psgi
         client => sub {
         my $cb     = shift;
         my $params = { stack => 'master' };
-        my $req    = POST( 'action/lock', Content => { action => encode_json($params) } );
+        my $req    = POST( 'action/lock', @headers, Content => { action => encode_json($params) } );
         my $res    = $cb->($req);
         action_response_ok($res);
         };
@@ -103,7 +104,7 @@ test_psgi
         client => sub {
         my $cb     = shift;
         my $params = { author => 'THEBARD', recurse => 0, message => 'test', archives => [$archive] };
-        my $req    = POST( 'action/add', Content => { action => encode_json($params) } );
+        my $req    = POST( 'action/add', @headers, Content => { action => encode_json($params) } );
         my $res    = $cb->($req);
         action_response_not_ok( $res, qr{is locked} );
         };
@@ -171,13 +172,13 @@ test_psgi
         client => sub {
         my $cb     = shift;
         my $params = {};
-        my $req    = POST( 'action/list', Content => { action_args => encode_json($params) } );
+        my $req    = POST( 'action/list', @headers, Content => { action_args => encode_json($params) } );
         my $res    = $cb->($req);
 
         is $res->code, 200, 'Correct status code';
 
         # Note that the lines of the listing itself should NOT contain
-        # the $PINTO_SERVER_RESPONSE_LINE_PREFIX in front of each line.
+        # the $PINTO_PROTOCOL_DIAG_PREFIX in front of each line.
 
         like $res->content, qr{\s Foo \s+ 0.7 \s+ \S+ \n}mx, 'Listing contains the Foo package';
 
@@ -199,7 +200,7 @@ for my $v ( 1, 2 ) {
         client => sub {
         my $cb     = shift;
         my $params = { stack => $stack };
-        my $req    = POST( 'action/new', Content => { action => encode_json($params) } );
+        my $req    = POST( 'action/new', @headers, Content => { action => encode_json($params) } );
         my $res    = $cb->($req);
 
         action_response_ok($res);
@@ -210,7 +211,7 @@ for my $v ( 1, 2 ) {
         client => sub {
         my $cb     = shift;
         my $params = { author => 'JOHN', recurse => 0, stack => $stack, message => 'test', archives => [$archive] };
-        my $req    = POST( 'action/add', Content => { action => encode_json($params) } );
+        my $req    = POST( 'action/add', @headers, Content => { action => encode_json($params) } );
         my $res    = $cb->($req);
 
         action_response_ok($res);
@@ -266,10 +267,60 @@ test_psgi
     client => sub {
     my $cb     = shift;
     my $params = {};
-    my $req    = POST( 'action/bogus', Content => { action => encode_json($params) } );
+    my $req    = POST( 'action/bogus', @headers, Content => { action => encode_json($params) } );
     my $res    = $cb->($req);
 
     action_response_not_ok( $res, qr{Can't locate Pinto/Action/Bogus.pm}i );
+    };
+
+#------------------------------------------------------------------------------
+# Unversioned client (no Accept header)
+
+test_psgi
+    app    => $app,
+    client => sub {
+    my $cb = shift;
+
+    my $req = POST( 'action/nop', Content => { action => encode_json({}) } );
+    my $res = $cb->($req);
+
+    is $res->code, 415, 'Unsupported media type status';
+    like $res->content, qr/too old/;
+    like $res->content, qr/upgrade pinto/;
+    };
+
+#------------------------------------------------------------------------------
+# Client version is too old (i.e. server is too new)
+
+test_psgi
+    app    => $app,
+    client => sub {
+    my $cb = shift;
+
+    my @headers = (Accept => 'application/vnd.pinto.v0+text');
+    my $req     = POST( 'action/nop', Content => { action => encode_json({}) } );
+    my $res     = $cb->($req);
+
+    is $res->code, 415, 'Unsupported media type status';
+    like $res->content, qr/too old/;
+    like $res->content, qr/upgrade pinto/;
+    };
+
+#------------------------------------------------------------------------------
+# # Client version is too new (i.e. server is too old)
+
+test_psgi
+    app    => $app,
+    client => sub {
+    my $cb = shift;
+
+    my @headers = (Accept => 'application/vnd.pinto.v99+text');
+    my $req     = POST( 'action/nop', @headers, Content => { action => encode_json({}) } );
+    my $res     = $cb->($req);
+
+    is $res->code, 415, 'Unsupported media type status';
+    like $res->content, qr/too new/;
+    like $res->content, qr/upgrade pintod/;
     };
 
 #------------------------------------------------------------------------------
@@ -283,14 +334,14 @@ sub action_response_ok {
     local $Test::Builder::Level = $Test::Builder::Level + 3;
 
     my $type = $response->header('Content-Type');
-    is $type, 'text/plain', "Correct Content-Type header for $test_name";
+    is $type, 'text/plain', "Content-Type response header from $test_name";
 
     my $status = $response->code;
     is $status, 200, "Succesful status code for $test_name";
 
     my $content = $response->content;
 
-    like $content, qr{$PINTO_SERVER_STATUS_OK\n$}, "Response ends with status-ok for $test_name";
+    like $content, qr{$PINTO_PROTOCOL_STATUS_OK\n$}, "Response ends with status-ok for $test_name";
 
     like $content, $pattern, "Response content matches for $test_name"
         if $pattern;
@@ -307,14 +358,14 @@ sub action_response_not_ok {
     local $Test::Builder::Level = $Test::Builder::Level + 3;
 
     my $type = $response->header('Content-Type');
-    is $type, 'text/plain', "Correct Content-Type header for $test_name";
+    is $type, 'text/plain', "Content-Type response header from $test_name";
 
     my $status = $response->code;
     is $status, 200, "Succesful status code for $test_name";
 
     my $content = $response->content;
 
-    unlike $content, qr{$PINTO_SERVER_STATUS_OK\n$}, "Response does not end with status-ok for $test_name";
+    unlike $content, qr{$PINTO_PROTOCOL_STATUS_OK\n$}, "Response does not end with status-ok for $test_name";
 
     like $content, $pattern, "Response content matches for $test_name"
         if $pattern;
