@@ -7,10 +7,10 @@ use Test::More;
 use Plack::Test;
 
 use JSON;
-use HTTP::Request;
+use HTTP::Request::Common;
 
 use Pinto::Server;
-use Pinto::Constants qw(:server);
+use Pinto::Constants qw(:protocol);
 
 use lib 't/lib';
 use Pinto::Tester;
@@ -27,6 +27,7 @@ my %opts          = ( root => $t->pinto->root, auth => $auth );
 my $app           = Pinto::Server->new(%opts)->to_app;
 
 my $auth_required_rx = qr/authorization required/i;
+my @headers          = (Accept => $PINTO_PROTOCOL_ACCEPT);
 
 #------------------------------------------------------------------------------
 
@@ -35,13 +36,13 @@ test_psgi
     client => sub {
     my $cb = shift;
 
-    my $post_req = HTTP::Request->new( POST => "/action/list" );
+    my $post_req = POST("/action/list", @headers);
     my $post_res = $cb->($post_req);
 
     ok !$post_res->is_success, 'POST request without authentication failed';
     like $post_res->content, $auth_required_rx, 'Expected content';
 
-    my $get_req = HTTP::Request->new( GET => "/init/modules/02packages.details.txt.gz" );
+    my $get_req = GET("/init/modules/02packages.details.txt.gz");
     my $get_res = $cb->($get_req);
 
     ok !$get_res->is_success, 'GET request without authentication failed';
@@ -56,14 +57,14 @@ test_psgi
     client => sub {
     my $cb = shift;
 
-    my $post_req = HTTP::Request->new( POST => "/action/list" );
+    my $post_req = POST("/action/list", @headers);
     $post_req->authorization_basic(@credentials);
     my $post_res = $cb->($post_req);
 
     ok $post_res->is_success, 'POST request with correct password succeeded';
-    like $post_res->content, qr{$PINTO_SERVER_STATUS_OK\n$}, 'Got status-ok';
+    like $post_res->content, qr{$PINTO_PROTOCOL_STATUS_OK\n$}, 'Got status-ok';
 
-    my $get_req = HTTP::Request->new( GET => "modules/02packages.details.txt.gz" );
+    my $get_req = GET("modules/02packages.details.txt.gz");
     $get_req->authorization_basic(@credentials);
     my $get_res = $cb->($get_req);
 
@@ -81,14 +82,14 @@ test_psgi
 
     my @bad_credentials = qw(my_login my_bogus_password);
 
-    my $post_req = HTTP::Request->new( POST => "/action/list" );
+    my $post_req = POST("/action/list", @headers);
     $post_req->authorization_basic(@bad_credentials);
     my $post_res = $cb->($post_req);
 
     ok !$post_res->is_success, 'POST request with invalid password failed';
     like $post_res->content, $auth_required_rx, 'Expected content';
 
-    my $get_req = HTTP::Request->new( GET => "/init/modules/02packages.details.txt.gz" );
+    my $get_req = GET("/init/modules/02packages.details.txt.gz");
     $get_req->authorization_basic(@bad_credentials);
     my $get_res = $cb->($get_req);
 
